@@ -173,7 +173,6 @@ namespace Castle.ActiveRecord.Tests
 		}
 
 		[Test]
-        [Ignore("Hooks not working with ActiveRecordBase<>")]
 		public void RelationsOneToManyWithWhereAndOrder()
 		{
 			Blog blog = new Blog();
